{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 60,
  "lineage": "aa64c9cb-5fb1-1ce0-77f2-c0f51e53ccc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gateway_vpc_link_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:security-group/sg-07a5205f7d33a8080",
            "description": "gateway_vpc_link_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a5205f7d33a8080",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "gateway_vpc_link_sg",
            "name_prefix": "",
            "owner_id": "008744601422",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "scenario": "1",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "scenario": "1",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:security-group/sg-0869e3bbc1633bcfc",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0869e3bbc1633bcfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "core-service-alb_sg",
            "name_prefix": "",
            "owner_id": "008744601422",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:security-group/sg-00c53c0eb4bd8c1ac",
            "description": "Bastion SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c53c0eb4bd8c1ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "008744601422",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:loadbalancer/app/core-service-LB/5f6b29d85d0ac981",
            "arn_suffix": "app/core-service-LB/5f6b29d85d0ac981",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-core-service-LB-244975976.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:loadbalancer/app/core-service-LB/5f6b29d85d0ac981",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "core-service-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0869e3bbc1633bcfc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-081e40c267201d6ad"
              },
              {
                "subnet_id": "subnet-09d8a796be5e22779"
              }
            ],
            "subnets": [
              "subnet-081e40c267201d6ad",
              "subnet-09d8a796be5e22779"
            ],
            "tags": {
              "Name": "core-service-LB",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "core-service-LB",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-00aec6b78339daab8",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.core-service.aws_security_group.alb_sg",
            "module.core-service.module.vpc.aws_subnet.private",
            "module.core-service.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:listener/app/core-service-LB/5f6b29d85d0ac981/394615299df3424f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230426073321229800000003/4348c92c80294e61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:listener/app/core-service-LB/5f6b29d85d0ac981/394615299df3424f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:loadbalancer/app/core-service-LB/5f6b29d85d0ac981",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.aws_security_group.alb_sg",
            "module.core-service.module.alb.aws_lb.this",
            "module.core-service.module.alb.aws_lb_target_group.main",
            "module.core-service.module.order_service_lambda_alias.aws_lambda_alias.no_refresh",
            "module.core-service.module.order_service_lambda_alias.aws_lambda_alias.with_refresh",
            "module.core-service.module.order_service_lambda_alias.data.aws_lambda_alias.existing",
            "module.core-service.module.vpc.aws_subnet.private",
            "module.core-service.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230426073321229800000003/4348c92c80294e61",
            "arn_suffix": "targetgroup/tf-20230426073321229800000003/4348c92c80294e61",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230426073321229800000003/4348c92c80294e61",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-20230426073321229800000003",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "tags": {
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "environment": "dev",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "lambda",
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "dependencies": [
            "module.core-service.aws_security_group.alb_sg",
            "module.core-service.module.alb.aws_lb.this",
            "module.core-service.module.order_service_lambda.aws_cloudwatch_log_group.lambda",
            "module.core-service.module.order_service_lambda.aws_iam_policy.additional_inline",
            "module.core-service.module.order_service_lambda.aws_iam_policy.additional_json",
            "module.core-service.module.order_service_lambda.aws_iam_policy.additional_jsons",
            "module.core-service.module.order_service_lambda.aws_iam_policy.async",
            "module.core-service.module.order_service_lambda.aws_iam_policy.dead_letter",
            "module.core-service.module.order_service_lambda.aws_iam_policy.logs",
            "module.core-service.module.order_service_lambda.aws_iam_policy.tracing",
            "module.core-service.module.order_service_lambda.aws_iam_policy.vpc",
            "module.core-service.module.order_service_lambda.aws_iam_role.lambda",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_json",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_many",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_one",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.async",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.logs",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.tracing",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.vpc",
            "module.core-service.module.order_service_lambda.aws_lambda_function.this",
            "module.core-service.module.order_service_lambda.aws_s3_object.lambda_package",
            "module.core-service.module.order_service_lambda.data.aws_arn.log_group_arn",
            "module.core-service.module.order_service_lambda.data.aws_cloudwatch_log_group.lambda",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy.tracing",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy.vpc",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.additional_inline",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.assume_role",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.async",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.dead_letter",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.logs",
            "module.core-service.module.order_service_lambda.data.aws_partition.current",
            "module.core-service.module.order_service_lambda.data.external.archive_prepare",
            "module.core-service.module.order_service_lambda.local_file.archive_plan",
            "module.core-service.module.order_service_lambda.null_resource.archive",
            "module.core-service.module.order_service_lambda_alias.aws_lambda_alias.no_refresh",
            "module.core-service.module.order_service_lambda_alias.aws_lambda_alias.with_refresh",
            "module.core-service.module.order_service_lambda_alias.data.aws_lambda_alias.existing",
            "module.core-service.module.vpc.aws_subnet.private",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.core-service.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.lambda_with_allowed_triggers",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230426073321229800000003/4348c92c80294e61-20230426073411020000000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:008744601422:targetgroup/tf-20230426073321229800000003/4348c92c80294e61",
            "target_id": "arn:aws:lambda:ap-south-1:008744601422:function:order-service-lambda:order-Service_lambda_alias"
          },
          "dependencies": [
            "module.core-service.aws_security_group.alb_sg",
            "module.core-service.module.alb.aws_lb.this",
            "module.core-service.module.alb.aws_lb_target_group.main",
            "module.core-service.module.order_service_lambda.aws_cloudwatch_log_group.lambda",
            "module.core-service.module.order_service_lambda.aws_iam_policy.additional_inline",
            "module.core-service.module.order_service_lambda.aws_iam_policy.additional_json",
            "module.core-service.module.order_service_lambda.aws_iam_policy.additional_jsons",
            "module.core-service.module.order_service_lambda.aws_iam_policy.async",
            "module.core-service.module.order_service_lambda.aws_iam_policy.dead_letter",
            "module.core-service.module.order_service_lambda.aws_iam_policy.logs",
            "module.core-service.module.order_service_lambda.aws_iam_policy.tracing",
            "module.core-service.module.order_service_lambda.aws_iam_policy.vpc",
            "module.core-service.module.order_service_lambda.aws_iam_role.lambda",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_inline",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_json",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_jsons",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_many",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.additional_one",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.async",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.dead_letter",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.logs",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.tracing",
            "module.core-service.module.order_service_lambda.aws_iam_role_policy_attachment.vpc",
            "module.core-service.module.order_service_lambda.aws_lambda_function.this",
            "module.core-service.module.order_service_lambda.aws_s3_object.lambda_package",
            "module.core-service.module.order_service_lambda.data.aws_arn.log_group_arn",
            "module.core-service.module.order_service_lambda.data.aws_cloudwatch_log_group.lambda",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy.tracing",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy.vpc",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.additional_inline",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.assume_role",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.async",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.dead_letter",
            "module.core-service.module.order_service_lambda.data.aws_iam_policy_document.logs",
            "module.core-service.module.order_service_lambda.data.aws_partition.current",
            "module.core-service.module.order_service_lambda.data.external.archive_prepare",
            "module.core-service.module.order_service_lambda.local_file.archive_plan",
            "module.core-service.module.order_service_lambda.null_resource.archive",
            "module.core-service.module.order_service_lambda_alias.aws_lambda_alias.no_refresh",
            "module.core-service.module.order_service_lambda_alias.aws_lambda_alias.with_refresh",
            "module.core-service.module.order_service_lambda_alias.data.aws_lambda_alias.existing",
            "module.core-service.module.vpc.aws_subnet.private",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c768662cc797cd75",
            "arn": "arn:aws:ec2:ap-south-1:008744601422:instance/i-0e6bc3f8427e2b130",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6bc3f8427e2b130",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yd-the-winner",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f8f1c5c1ee4dbe0",
            "private_dns": "ip-10-0-101-55.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.55",
            "public_dns": "ec2-13-232-190-111.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.190.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-000374c1f284a8ec9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f71949b8671d81be",
            "tags": {
              "Environment": "dev",
              "Name": "bastion-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "bastion-instance"
            },
            "vpc_security_group_ids": [
              "sg-00c53c0eb4bd8c1ac"
            ]
          },
          "dependencies": [
            "module.core-service.aws_security_group.bastion_sg",
            "module.core-service.module.vpc.aws_subnet.public",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:internet-gateway/igw-06304f6e647e05fa8",
            "id": "igw-06304f6e647e05fa8",
            "owner_id": "008744601422",
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc"
            },
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06304f6e647e05fa8",
            "id": "r-rtb-0c7767290ef6c07c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c7767290ef6c07c7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_internet_gateway.this",
            "module.core-service.module.vpc.aws_route_table.public",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:route-table/rtb-0d57aa69bb5993caa",
            "id": "rtb-0d57aa69bb5993caa",
            "owner_id": "008744601422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:route-table/rtb-01b998feeeb162713",
            "id": "rtb-01b998feeeb162713",
            "owner_id": "008744601422",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:route-table/rtb-0c7767290ef6c07c7",
            "id": "rtb-0c7767290ef6c07c7",
            "owner_id": "008744601422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06304f6e647e05fa8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fdad4b95cd56852",
            "route_table_id": "rtb-0d57aa69bb5993caa",
            "subnet_id": "subnet-09d8a796be5e22779"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_route_table.private",
            "module.core-service.module.vpc.aws_subnet.private",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a910c0ea46cf087",
            "route_table_id": "rtb-01b998feeeb162713",
            "subnet_id": "subnet-081e40c267201d6ad"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_route_table.private",
            "module.core-service.module.vpc.aws_subnet.private",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06152ae5fcb8c4d0e",
            "route_table_id": "rtb-0c7767290ef6c07c7",
            "subnet_id": "subnet-0f71949b8671d81be"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_route_table.public",
            "module.core-service.module.vpc.aws_subnet.public",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095e63d7eadc945b8",
            "route_table_id": "rtb-0c7767290ef6c07c7",
            "subnet_id": "subnet-0423011d3e6233d14"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_route_table.public",
            "module.core-service.module.vpc.aws_subnet.public",
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-09d8a796be5e22779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d8a796be5e22779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1a"
            },
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-081e40c267201d6ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e40c267201d6ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-private-ap-south-1b"
            },
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-0f71949b8671d81be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f71949b8671d81be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-public-ap-south-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-public-ap-south-1a"
            },
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:subnet/subnet-0423011d3e6233d14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423011d3e6233d14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008744601422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc-public-ap-south-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc-public-ap-south-1b"
            },
            "vpc_id": "vpc-00aec6b78339daab8"
          },
          "dependencies": [
            "module.core-service.module.vpc.aws_vpc.this",
            "module.core-service.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.core-service.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.core-service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:008744601422:vpc/vpc-00aec6b78339daab8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfa7fda781a6fde7",
            "default_route_table_id": "rtb-0517ab1410ece36d7",
            "default_security_group_id": "sg-0e7d5b8236a6e7ef3",
            "dhcp_options_id": "dopt-0c551128ae4f108dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00aec6b78339daab8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0517ab1410ece36d7",
            "owner_id": "008744601422",
            "tags": {
              "Environment": "dev",
              "Name": "core-service-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "core-service-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}